modif auth + pages

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -62,7 +62,7 @@
 
 body {
   /*position: relative;*/
-  background-image: url('../public/test.jpg'); /* Chemin vers votre image */
+  background-image: url('../public/world.jpg'); /* Chemin vers votre image */
   /*position: relative;
   background-size: 2000px 1000px; /* Ajustez la taille de l'image */
   background-size: 2000px 1000px;
