--- a/frontend/src/components/Login42.css
+++ b/frontend/src/components/Login42.css
@@ -1,9 +1,6 @@
 /* Login.css */
 
 /* Applique un arrière-plan de couleur à la page de connexion */
-body {
-  background-color: #f0f0f0;
-}
 
 .button {
   transition: transform 0.3s ease-in-out;
@@ -15,8 +12,9 @@ body {
 
 /* Centre le formulaire de connexion */
 .login-container { 
-  background-image: url('/../public/src/42Logo.png');
-  width: 300px;
+  /*background-image: url('/../public/src/42Logo.png'); */
+  
+  width: 100px;
   margin: 0 auto;
   text-align: center; 
   padding: 100px;
@@ -32,10 +30,6 @@ body {
    /* Pour occuper 100% de la hauteur de la fenêtre */
 }
 
-.login-container img {
-  width: 100px; /* Ajustez la largeur de votre logo comme vous le souhaitez */
-  height: 100px; /* Permet au logo de conserver ses proportions */
-}
 
 /* Style pour les champs de saisie */
 input[type="text"],
@@ -54,7 +48,12 @@ button {
   background-color: #007bff;
   color: #fff;
   border: none;
-  border-radius: 4px;
+  border-radius: 100px;
   cursor: pointer;
+}
+/*A MODIFIER*/
+button:hover {
+  color: #000; /* Couleur du texte en noir au survol */
+  background-color: #fff; /* Fond blanc au survol */
 }
 
