--- a/frontend/src/components/Login42.css
+++ b/frontend/src/components/Login42.css
@@ -10,39 +10,39 @@
   transform: scale(1.1);
 }
 
-/* Centre le formulaire de connexion */
-.login-container { 
-  /*background-image: url('/../public/src/42Logo.png'); */
-  
-  width: 100px;
+.centered-image {
+  width: "200";
+  height: "100";
   margin: 0 auto;
-  text-align: center; 
-  padding: 100px;
-  background-color: #fff;
-  border-radius: 100px;
-  box-shadow: 0px 50px 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 20vh; /* Ajustez cette valeur selon vos besoins */
+  margin-top: 30vh;
+}
+/* Centre le formulaire de connexion */
+button { 
+  width: 200px;
+  margin: 0 auto;
+  text-align: center; 
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 100px;
+  box-shadow: 0px 20px 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2vh; /* Ajustez cette valeur selon vos besoins */
   /*transform: translateY(-50%);
    /* Pour occuper 100% de la hauteur de la fenêtre */
 }
 
 
-/* Style pour les champs de saisie */
-input[type="text"],
-input[type="password"] {
-  width: 95%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-/* Style pour le bouton de connexion */
-button {
+/* Style pour le bouton de connexion 
+button {i
   width: 100%;
   padding: 10px;
   background-color: #007bff;
@@ -50,10 +50,10 @@ button {
   border: none;
   border-radius: 100px;
   cursor: pointer;
-}
+} */
 /*A MODIFIER*/
 button:hover {
-  color: #000; /* Couleur du texte en noir au survol */
-  background-color: #fff; /* Fond blanc au survol */
+  color: #fff; /* Couleur du texte en noir au survol */
+  background-color: #01263a; /* Fond blanc au survol */
 }
 
