--- a/frontend/src/components/Login42.css
+++ b/frontend/src/components/Login42.css
@@ -22,38 +22,55 @@
   align-items: center;
   margin-top: 30vh;
 }
-/* Centre le formulaire de connexion */
+
+.login-button {
+  background-image: url('../../public/42Logo.png');
+  background-size: 60px; /* Ajustez la taille de l'image selon vos préférences */
+  background-repeat: no-repeat; /* Empêche la répétition de l'image */
+  background-color: transparent; /* Rend le fond transparent */
+  width: 200px;
+  margin: 0 auto;
+  text-align: center;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 20px 100px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2vh;
+}
+
+.login-button:hover {
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+
 button { 
   width: 200px;
   margin: 0 auto;
   text-align: center; 
   padding: 20px;
   background-color: #fff;
-  border-radius: 100px;
+  border-radius: 10px;
   box-shadow: 0px 20px 10px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 2vh; /* Ajustez cette valeur selon vos besoins */
-  /*transform: translateY(-50%);
-   /* Pour occuper 100% de la hauteur de la fenêtre */
-}
-
-
-/* Style pour le bouton de connexion 
-button {i
+  margin-top: 2vh;
   width: 100%;
   padding: 10px;
   background-color: #007bff;
-  color: #fff;
-  border: none;
   border-radius: 100px;
   cursor: pointer;
-} */
-/*A MODIFIER*/
-button:hover {
-  color: #fff; /* Couleur du texte en noir au survol */
-  background-color: #01263a; /* Fond blanc au survol */
+  color: #000; /* Couleur du texte en noir */
+  border: 2px solid #fff;
 }
+button:hover {
+  color: #fff;
+  background-color: #01263a;
+}
+
 
