--- a/frontend/src/components/Login42.css
+++ b/frontend/src/components/Login42.css
@@ -24,21 +24,24 @@
 }
 
 .login-button {
-  background-image: url('../../public/42Logo.png');
-  background-size: 60px; /* Ajustez la taille de l'image selon vos préférences */
-  background-repeat: no-repeat; /* Empêche la répétition de l'image */
-  background-color: transparent; /* Rend le fond transparent */
-  width: 200px;
+  background-image: url('../../public/42Logow.svg');
+  background-size: 50px;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  background-position: 10px center;
+  width: 150px;
   margin: 0 auto;
-  text-align: center;
-  padding: 20px;
-  border-radius: 10px;
+  text-align: 100px center;
+  padding: 20px 10px 20px 50px;
+  border-radius: 5px;
   box-shadow: 0px 20px 100px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-top: 2vh;
+  font-size: 22px;
+  font-family: sans-serif;
 }
 
 .login-button:hover {
@@ -49,8 +52,7 @@
 
 button { 
   width: 200px;
-  margin: 0 auto;
-  text-align: center; 
+  margin: 0 auto; 
   padding: 20px;
   background-color: #fff;
   border-radius: 10px;
@@ -65,7 +67,7 @@ button {
   background-color: #007bff;
   border-radius: 100px;
   cursor: pointer;
-  color: #000; /* Couleur du texte en noir */
+  color: #fff;
   border: 2px solid #fff;
 }
 button:hover {
