--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -32,14 +32,14 @@
 
 body {
 	
- /* background-color: #000;
-  opacity: 0.5; */
-  background-image: url('../public/particules.gif');
+  background-color: #000;
+  opacity: 1;
+  /*background-image: url('../public/particules.gif');*/
   background-size: 2000px 1000px;
   background-repeat: no-repeat; /* Empêchez la répétition de l'image */
 }
 
-  /* Créez l'effet de superposition blanc */
+  /* 
 body::after {
     content: "";
     position: absolute;
@@ -47,8 +47,8 @@ body::after {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.3); /* Couleur blanche avec une opacité de 0.5 */
-    z-index: -1; /* Placez-le en arrière-plan du contenu */
+    background-color: rgba(255, 255, 255, 0.3); 
+    z-index: -1;
   }
-
+*/
 
