changement page d'acceuil [FRONT]

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -29,15 +29,42 @@
   color: yellow;
 }
 
-
 body {
+  background-color: rgba(15, 13, 14, 1);
+  border: 2.5vw solid rgba(35, 31, 32, 1); /* Utilisation de vw pour la bordure */
+  box-sizing: border-box;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+.content {
+  width: 80%;
+  margin: 0 auto;
+}
+
+/* Styles pour les écrans plus petits (par exemple, les smartphones) */
+@media (max-width: 768px) {
+  .content {
+    width: 100%;
+  }
+}
+/*
+body {
+  background: linear-gradient(180deg, #2980b9 0%, #2c3e50 100%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  color: #fff;
+} */
+
+/*body {
 	
   background-color: #000;
   opacity: 1;
-  /*background-image: url('../public/particules.gif');*/
+  background-image: url('../public/particules.gif');
   background-size: 2000px 1000px;
-  background-repeat: no-repeat; /* Empêchez la répétition de l'image */
-}
+  background-repeat: no-repeat;
+}*/
 
   /* 
 body::after {
