--- a/frontend/src/components/Login42.css
+++ b/frontend/src/components/Login42.css
@@ -1,14 +1,93 @@
 /* Login.css */
 
-/* Applique un arrière-plan de couleur à la page de connexion */
 
-.button {
-  transition: transform 0.3s ease-in-out;
+@font-face {
+  font-family: "YoungSerif";
+  src: url("../fonts/YoungSerif-Regular.ttf") format("truetype");}
+
+@font-face {
+  font-family: "Dela";
+  src: url("../fonts/DelaGothicOne-Regular.ttf") format("truetype");}
+ 
+@font-face {
+  font-family: "Kanit";
+  src: url("../fonts/Kanit-LightItalic.ttf") format("truetype");
 }
 
-.button:hover {
-  transform: scale(1.1);
+@font-face {
+  font-family: "Roboto";
+  src: url("../fonts/RobotoMono-ExtraLight.ttf") format("truetype");
 }
+
+.container_ft {
+  width: 40%;
+  margin: auto;
+  padding: 1px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 1px;
+  background-color: #231f20;
+  cursor: pointer;
+  color: #fff;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+}
+
+.container_ft:hover {
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.2);;
+}
+
+.text-ft {
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  color: #f9f4da;
+}
+
+.text-ft2 {
+font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  color: #0ba759;
+}
+
+.text-container {
+  margin-top: 50px;
+  padding: 0; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.text-pong {
+  font-family: "Kanit", sans-serif;
+  font-size: 70px;
+  color: #fff;
+  text-align: center; 
+  color: #f9f4da;
+}
+
+.text-game {
+  font-style: italic;
+  font-family: "Dela", sans-serif;
+  font-size: 100px;
+  text-align: center;
+  color: #f088a0;
+}
+.italic-text {
+  font-family: "YoungSerif", sans-serif;
+  font-size: 20px;
+  color: #fff;
+  text-align: center;
+  color: #f9f4da;
+  margin-top: 1px; /* Ajuster la marge supérieure selon vos besoins */
+  line-height: 1;
+  padding: 100;
+}
+
+/*BOUTON 42 LOGIN*/
 
 .centered-image {
   width: "200";
