--- a/frontend/src/components/Login42.css
+++ b/frontend/src/components/Login42.css
@@ -19,6 +19,19 @@
   src: url("../fonts/RobotoMono-ExtraLight.ttf") format("truetype");
 }
 
+/* BACKGROUND */
+.back {
+  background-color: rgba(15, 13, 14, 1);
+  border: 2.5vw solid rgba(35, 31, 32, 1);
+  box-sizing: border-box;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+.content {
+  width: 80%;
+  margin: 0 auto;
+}
 /* TEXT transcendance */
 
 .container_ft {
