--- a/frontend/src/pages/Profil.css
+++ b/frontend/src/pages/Profil.css
@@ -1,40 +1,124 @@
+.profile-grid1 {
+  display: grid;
+  grid-template-columns: 300px 300px;
+  gap: 50px;
+  margin-top: 0%;
+  margin-right : 20%;
+  margin-left: 20%;
+  /*justify-content: center;*/
+ /* align-items: center;*/
+}
+
 .containerProfile {
+  /*text-align: left;*/
+  display: flex;
+  flex-direction: row;
+  /*align-items: center;*/
+  /*justify-content: left;*/
+  height: 100%;
+  padding: 20px;
+  font-size: 12px;
+  font-family: "Dela";
+  color: #12b5e5;
+  /*color: #fcba28; JAUNE */
+  text-decoration: none;
+  border-radius: 10px;
+  transition: transform 0.3s ease;
+}
+
+/*.containerProfile:hover {
+  transform: scale(1.1);
+}*/
+
+.profile-2{
+  width: 500px;
+  height: 300px; 
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: #231f20;
+  background-position: center;
+}
+.profile-1 {
+  width: 500px;
+  height: 700px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: #231f20;
+  /*background-position: center;*/
+}
+.profile-1:hover,
+.profile-2:hover {
+  background-color: #f9f4da;
+  color: #fcba28;
+}
+
+.profile-content {
+  margin-bottom: 70px;
+  text-align: left;
+
+}
+
+
+.profile-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px 10px 0 0;
+}
+
+.info-header {
+  display: flex;
+  align-items: center;
+}
+
+.edit-button {
+  /*margin-left: 120%;*/
+  margin-left: auto;
+}
+
+.edit-button a {
+  background-color: #fcba28;
+  color: #231f20;
+  padding: 5px 10px;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+
+.edit-button a:hover {
+  background-color: #f9f4da;
+}
+
+/*
+.profile-container {
   background-color: #231f20;
   color: #f18aa2;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   padding: 10px 20px;
-
-.pic {
-  /*background-image: url('../../public/msebbane.jpg'); */
-  background-size: 25%;
-  background-repeat: no-repeat;
-  background-color: transparent;
-  padding: 20px 200px 50px;
-  /*border-radius: 20px ;*/
+}*/
+	/*
+.profile-info {
+  flex: 1;
+  margin-right: 100px;
 }
-.imgprofile {
-    max-width: 100%; /* La largeur maximale de l'image sera de 100% de la largeur de son conteneur parent */
-    height: auto; /* La hauteur s'ajustera automatiquement pour maintenir les proportions originales de l'image */
-    display: block; /* Supprime l'espace supplémentaire en dessous de l'image */
-    margin-top: 10px; /* Ajoute un espace au-dessus de l'image, ajustez selon vos besoins */
-  }
 
-}
-/*  
+.profile-info h1 {
+  margin-bottom: 10px;
+}*/
 
-.text-containerl {
-  margin-left: 7%;
-  margin-bottom: 0;
-  margin-top: 0%;
-  padding: 0;
+/*
+.profile-image img {
+
   display: flex;
+  justify-content: center;
   align-items: center;
-  flex-direction: row;
-}
+  text-align: center;
+  background-color: transparent;
+  text-decoration: none;
+  text-shadow: none;
+  height: auto;
+}*/
 
-.text-containerl p {
-  margin: 0;
-}
-*/
