--- a/frontend/src/styles/Settings.module.scss
+++ b/frontend/src/styles/Settings.module.scss
@@ -114,7 +114,7 @@ $icon-size: 200px;
 
 	h2 {
 		//@include text-color(1.7rem);
-		color: #f18aa2;
+		color: #f9f4da;
 		//font-family: "Kanit", sans-serif;
 		font-family: "Dela", sans-serif;
   		font-size: 30px;
