--- a/frontend/src/components/Login42.css
+++ b/frontend/src/components/Login42.css
@@ -19,42 +19,32 @@
   src: url("../fonts/RobotoMono-ExtraLight.ttf") format("truetype");
 }
 
-/* BACKGROUND */
-.back {
-  background-color: rgba(15, 13, 14, 1);
-  border: 2.5vw solid rgba(35, 31, 32, 1);
-  box-sizing: border-box;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-.content {
-  width: 80%;
-  margin: 0 auto;
-}
 /* TEXT transcendance */
-
+.container-login {
+  padding: 0;
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 900px 1fr;
+  grid-template-rows:300px 80px 150px;
+}
 .container_ft {
-  margin-bottom: 5%;
-  margin-left: 20%;
-  margin-top:0;
   width: 60%;
-  padding: 1px;
   border-radius: 10px;
-  display: flex;
-  flex-direction: column;
+  display: grid;
   background-color: #231f20;
   cursor: pointer;
   color: #fff;
   padding: 0;
-  display: flex;
+  grid-column: 2;
+  grid-row: 2;
+  justify-self: center;
   flex-direction: row;
 }
-
+/*
 .container_ft:hover {
   color: #fff;
   background-color: rgba(255, 255, 255, 0.2);;
-}
+}*/
 
 .text-ft {
   font-family: "Roboto", sans-serif;
@@ -73,13 +63,14 @@ font-family: "Roboto", sans-serif;
 /*  TEXT PONG GAME */
 
 .text-container {
-  margin-left: 30%;
-  margin-bottom: 0;
-  margin-top: 10%;
   padding: 0; 
-  display: flex;
+  display: grid;
   align-items: center;
   flex-direction: row;
+  grid-column: 2;
+  grid-row: 1;
+  justify-self: center;
+  height: 0vh;
 }
 .text-container p {
   margin: 0;
@@ -117,7 +108,7 @@ font-family: "Roboto", sans-serif;
   margin: 0 auto;
   text-align: center;
   padding: 20px;
-  display: flex;
+  display: grid;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -136,13 +127,14 @@ font-family: "Roboto", sans-serif;
   padding: 20px 10px 20px 50px;
   border-radius: 5px;
   box-shadow: 0px 20px 100px rgba(0, 0, 0, 0.2);
-  display: flex;
+  display: grid;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 2vh;
   font-size: 22px;
   font-family: sans-serif;
+  grid-column: 2;
+  grid-row: 3;
 }
 
 .login-button:hover {
@@ -158,7 +150,7 @@ button {
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0px 20px 10px rgba(0, 0, 0, 0.2);
-  display: flex;
+  display: grid;
   flex-direction: column;
   justify-content: center;
   align-items: center;
