--- a/frontend/src/pages/Profil.css
+++ b/frontend/src/pages/Profil.css
@@ -37,12 +37,13 @@
   background-image: url('../../public/profile.svg');
   background-size: 90%;
   background-repeat: no-repeat;
-  background-color: #231f20;
+ /* background-color: #231f20;*/
   background-position: center;
   margin-right: 10px;
   border: none;
   outline: none;
   box-shadow: none;
+   background-color: rgba(0, 0, 0, 0.1);
 }
 
 .icon-email {
@@ -58,6 +59,7 @@
   border: none;
   outline: none;
   box-shadow: none;
+   background-color: rgba(255, 255, 255, 0.4);
 
 }
 
@@ -74,6 +76,8 @@
   border: none;
   outline: none;
   box-shadow: none;
+   background-color: rgba(255, 255, 255, 0.4);
+
 
 }
 
@@ -82,8 +86,9 @@
   height: 300px; 
   background-size: cover;
   background-repeat: no-repeat;
-  background-color: #231f20;
-  #background-image: .icon-profile;
+   background-color: rgba(255, 255, 255, 0.4);
+  border: 3px solid #ffffff;
+  border-radius: 5px;
   background-position: center;
 }
 
@@ -93,17 +98,29 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-color: #231f20;
+   background-color: rgba(255, 255, 255, 0.4);
+  border: 3px solid #ffffff;
+  border-radius: 5px;
   /*background-position: center;*/
 }
 
-.icon-profile:hover,
-.icon-secure:hover,
-.icon-email:hover,
-.profile-1:hover,
-.profile-2:hover {
+/*
+#profile-1:hover,
+#profile-1:hover .icon-profile,
+#profile-1:hover .icon-secure,
+#profile-1:hover .icon-email,
+#profile-2:hover {
   background-color: #f9f4da;
   color: #fcba28;
+}*/
+
+.profile-info-text {
+  font-weight: bold;
+  color: #8cb6d6;
+  font: 1.2rem "Fira Sans", sans-serif;
+  font-size: 20px;
 }
+
 
 .profile-content {
   margin-bottom: 70px;
@@ -122,11 +139,6 @@
 .info-header {
   display: flex;
   align-items: center;
-}
-
-.info-header:hover {
-  background-color: #f9f4da;
-  color: #fcba28;
 }
 
 .edit-button {
