Modif logout + page 2FA [FRONT]

--- a/frontend/src/components/Login42.css
+++ b/frontend/src/components/Login42.css
@@ -149,7 +149,7 @@ button {
   padding: 20px;
   background-color: #fff;
   border-radius: 10px;
-  box-shadow: 0px 20px 10px rgba(0, 0, 0, 0.2);
+  /*box-shadow: 0px 20px 10px rgba(0, 0, 0, 0.2);*/
   display: grid;
   flex-direction: column;
   justify-content: center;
