--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -34,7 +34,7 @@
 
 
 }
-.container {
+.container0 {
   text-align: center;
   display: flex;
   align-items: flex-end;
@@ -51,7 +51,7 @@
   transition: transform 0.3s ease;
 }
 
-.container:hover {
+.container0:hover {
   transform: scale(1.1);
 }
 
