--- a/frontend/src/pages/Profil.css
+++ b/frontend/src/pages/Profil.css
@@ -1,78 +1,70 @@
+@import "~bootstrap/dist/css/bootstrap.min.css";
+
 .profile-grid1 {
-  display: grid;
-  grid-template-columns: 300px 300px;
-  gap: 50px;
-  margin-top: 0%;
-  margin-right : 20%;
-  margin-left: 20%;
-  /*justify-content: center;*/
- /* align-items: center;*/
+  	display: grid;
+  	/*align-items: center;*/
+ 	/* grid-template-columns: 1fr 100px 400px 800px 400px 100px 1fr;*/
+  	/*grid-template-rows: 200px;*/
+  	gap: 1%;
+  	justify-content: center;
+  	margin-top: 2%;
+	margin-left: 8%;
+	margin-right: 10%;
+ 	/* align-items: center;*/
 }
 
-.containerProfile {
-  /*text-align: left;*/
-  display: flex;
-  flex-direction: row;
-  /*align-items: center;*/
-  /*justify-content: left;*/
-  height: 100%;
-  padding: 20px;
-  font-size: 12px;
-  font-family: "Dela";
-  color: #12b5e5;
-  /*color: #fcba28; JAUNE */
-  text-decoration: none;
-  border-radius: 10px;
-  transition: transform 0.3s ease;
+.title-profile {
+  /*font-family: "IBM Plex Mono";*/
+  font-size: 199px;
+  font-weight: bold;
+  color: #ea4c89;
+  font: 1.2rem "Fira Sans", sans-serif;
+  margin-top: 30px;
+  margin-right: 40px;
 }
-
-/*.containerProfile:hover {
-  background-color: #f9f4da;
-  color: #fcba28;
-}*/
 
 .icon-profile {
+  display: inline-block;
   width: 50px;
   height: 50px;
   background-image: url('../../public/profile.svg');
-  background-size: 90%;
+  background-size: 80%;
   background-repeat: no-repeat;
- /* background-color: #231f20;*/
   background-position: center;
   margin-right: 10px;
   border: none;
   outline: none;
   box-shadow: none;
-   background-color: rgba(0, 0, 0, 0.1);
 }
 
-.icon-email {
-  
+.icon-settings {
+
+  display: inline-block;
   width: 50px;
   height: 50px;
-  background-image: url('../../public/email.svg');
+  background-image: url('../../public/settings.svg');
   background-size: 80%;
   background-repeat: no-repeat;
   background-color: #231f20;
   background-position: center;
-  margin-right: 10px;
+  margin-left: 15px;
   border: none;
   outline: none;
   box-shadow: none;
-   background-color: rgba(255, 255, 255, 0.4);
-
+  background-color: rgba(255, 255, 255, 0.4);
 }
 
 .icon-secure {
 
+  display: inline-block;	
   width: 50px;
   height: 50px;
   background-image: url('../../public/security.svg');
-  background-size: 80%;
+  background-size: 90%;
   background-repeat: no-repeat;
   background-color: #231f20;
   background-position: center;
-  margin-right: 10px;
+  margin-left: 15px;
   border: none;
   outline: none;
   box-shadow: none;
@@ -82,26 +74,30 @@
 }
 
 .profile-2{
-  width: 500px;
-  height: 300px; 
-  background-size: cover;
-  background-repeat: no-repeat;
-   background-color: rgba(255, 255, 255, 0.4);
-  border: 3px solid #ffffff;
-  border-radius: 5px;
-  background-position: center;
+  	/*width: 850px;*/
+  	height: 300px; 
+  	background-size: cover;
+  	background-repeat: no-repeat;
+  	background-color: rgba(255, 255, 255, 0.4);
+  	border: 3px solid #ffffff;
+ 	border-radius: 5px;
+  	background-position: center;
+  	grid-column: 2;
+	padding: 5%;
 }
 
 .profile-1 {
-  width: 500px;
-  height: 700px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-color: #231f20;
-   background-color: rgba(255, 255, 255, 0.4);
-  border: 3px solid #ffffff;
-  border-radius: 5px;
-  /*background-position: center;*/
+  	width: 850px;
+  	height: 610px;
+  	background-size: cover;
+  	background-repeat: no-repeat;
+  	/*background-color: #231f20;*/
+   	background-color: rgba(255, 255, 255, 0.4);
+  	border: 3px solid #ffffff;
+  	border-radius: 5px;
+  	grid-column: 1;
+	grid-template-rows: 200px 200px 200px;
+  	/*background-position: center;*/
 }
 
 /*
@@ -116,17 +112,17 @@
 
 .profile-info-text {
   font-weight: bold;
-  color: #8cb6d6;
+  color: #f7bcd3;
   font: 1.2rem "Fira Sans", sans-serif;
   font-size: 20px;
 }
 
-
+/*
 .profile-content {
   margin-bottom: 70px;
   text-align: left;
 
-}
+}*/
 
 
 .profile-image {
@@ -135,11 +131,11 @@
   object-fit: cover;
   border-radius: 10px 10px 0 0;
 }
-
+/*
 .info-header {
   display: flex;
   align-items: center;
-}
+}*/
 
 .edit-button {
   /*margin-left: 120%;*/
@@ -160,15 +156,15 @@
   background-color: #f9f4da;
 }
 
-/*
-.profile-container {
+
+.profile-username-content {
   background-color: #231f20;
   color: #f18aa2;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px 20px;
-}*/
+}
 	/*
 .profile-info {
   flex: 1;
