--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -1,16 +1,17 @@
 /* global.css */
 
 body {
-  display: grid;
-  /*overflow: hidden;*/
+  /*display: grid;*/
+ /* overflow: hidden;*/
   background: url('../public/fond2.jpg');
-  background-size: cover;
+ /* background-size: cover;*/
   /*background-position: center;*/
-  background-repeat: no-repeat;
+  /*background-repeat: no-repeat;*/
   /*height: 100%;*/
   height: 100vh;
-  width: 100%;
+  /*width: 100%;*/
   /*flex-direction: column;*/
 }
+
 
 
