--- a/frontend/src/pages/Settings.css
+++ b/frontend/src/pages/Settings.css
@@ -1,7 +1,7 @@
 .Button-settings {
   background-color: transparent;
-  color: black;
-  border: 2px solid black;
+  color: white;
+  border: 2px solid white;
   border-radius: 10px;
   transition: background-color 0.3s, color 0.3s;
   width:200px;
@@ -9,9 +9,10 @@
 }
 
 .Button-settings:hover {
-  background-color: black;
-  border: 2px solid black;
+  border: 2px solid white;
   color: white;
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 .Button-settings-2FA-ON {
@@ -47,18 +48,28 @@
 }
 
 .larger-profile-pic {
-  width: 150px;  /* Ajustez la taille selon vos besoins */
-  height: 150px; /* Ajustez la taille selon vos besoins */
+  width: 120px;
+  height: 120px;
   object-fit: cover;
 }
-
+.mask-custom {
+  background: rgba(24, 24, 16, .2);
+  background-clip: border-box;
+  border-radius: 2em;
+  backdrop-filter: blur(15px);
+  border: 2px solid rgba(255, 255, 255, 0.05);
+  background-clip: padding-box;
+  box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.03);
+}
 .active-indicator {
   position: absolute;
   bottom: 1px;
   right: 270px;
-  width: 35px;
-  height: 35px;
-  background-color: #28a745; /* Couleur verte de Bootstrap */
+  width: 25px;
+  height: 25px;
+  background-color: #28a745;
   border-radius: 50%;
-  border: 2px solid #fff; /* Bordure blanche */
+  border: 1px solid #fff;
+  box-shadow: 0px 0px 7px #fff inset,
+  	      0px 0px 7px #fff;
 }
