--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -37,13 +37,18 @@
 
 .status-indicator {
   position: absolute;
-  bottom: 5px;
-  right: 40px;
+  top: 85%;
+  left: 96.5%;
+  transform: translate(-50%, -50%);
+  bottom: 1px;
+  /*right: 50%;*/
   width: 20px;
   height: 20px;
-  background-color: #28a745; /* Couleur verte de Bootstrap */
+  background-color: #28a745;
   border-radius: 50%;
-  border: 2px solid #fff; /* Bordure blanche */
+  border: 1px solid #fff;
+  box-shadow: 0px 0px 7px #fff inset,
+              0px 0px 7px #fff;
 }
 
 .logout-link {
