--- a/frontend/src/pages/Profil.css
+++ b/frontend/src/pages/Profil.css
@@ -50,6 +50,23 @@
   box-shadow: none;
 }
 
+.icon-profile1 {
+
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  background-image: url('../../public/profile.svg');
+  background-size: 90%;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-right: 10px;
+  border: none;
+  outline: none;
+  box-shadow: none;
+  transform: translateY(-130%);
+
+}
+
 .icon-settings {
 
   display: inline-block;
@@ -65,6 +82,33 @@
   box-shadow: none;
   transform: translateY(-130%);
 
+}
+.icon-stats {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  background-image: url('../../public/stats.svg');
+  background-size: 80%;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-right: 10px;
+  border: none;
+  outline: none;
+  box-shadow: none;
+}
+
+.icon-leader {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  background-image: url('../../public/game.svg');
+  background-size: 80%;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-right: 10px;
+  border: none;
+  outline: none;
+  box-shadow: none;
 }
 
 .icon-secure {
