--- a/frontend/src/pages/Settings.css
+++ b/frontend/src/pages/Settings.css
@@ -1,59 +1,59 @@
 .Button-settings {
-  background-color: transparent;
-  color: white;
-  border: 2px solid white;
-  border-radius: 10px;
-  transition: background-color 0.3s, color 0.3s;
+  background-color: transparent !important;
+  color: white !important;
+  border: 2px solid white !important;
+  border-radius: 10px !important;
+  transition: background-color 0.3s, color 0.3s !important;
   width:200px;
   height:60px;
-  --bs-btn-active-bg: transparent;
-  --bs-btn-active-border-color: white;
+  --bs-btn-active-bg: transparent !important;
+  --bs-btn-active-border-color: white !important;
 }
 
 .Button-settings:hover {
-  border: 2px solid white;
-  color: white;
-  color: #fff;
-  background-color: rgba(255, 255, 255, 0.2);
-  outline: none;
-  box-shadow: none;
+  border: 2px solid white !important;
+  color: white !important;
+  color: #fff !important;
+  background-color: rgba(255, 255, 255, 0.2) !important;
+  outline: none !important;
+  box-shadow: none !important;
 }
 
 
 .Button-settings-2FA-ON {
-  background-color: transparent;
-  color: green;
-  border: 2px solid green;
-  border-radius: 10px;
-  transition: background-color 0.3s, color 0.3s;
+  background-color: transparent!important;
+  color: green !important;
+  border: 2px solid green !important;
+  border-radius: 10px !important;
+  transition: background-color 0.3s, color 0.3s !important;
   width:200px;
   height:60px;
-  --bs-btn-active-bg: transparent;
-  --bs-btn-active-border-color: green;
+  --bs-btn-active-bg: transparent !important;
+  --bs-btn-active-border-color: green !important;
 }
 
 .Button-settings-2FA-ON:hover {
-  background-color: rgba(0, 128, 0, 0.2);
-  border: 2px solid green;
-  color: white;
+  background-color: rgba(0, 128, 0, 0.2) !important;
+  border: 2px solid green !important;
+  color: white !important;
 }
 
 .Button-settings-2FA-OFF {
-  background-color: transparent;
-  color: red;
-  border: 2px solid red;
-  border-radius: 10px;
-  transition: background-color 0.3s, color 0.3s;
+  background-color: transparent !important;
+  color: red !important;
+  border: 2px solid red !important;
+  border-radius: 10px !important;
+  transition: background-color 0.3s, color 0.3s !important;
   width:200px;
   height:60px;
-  --bs-btn-active-bg: transparent;
-  --bs-btn-active-border-color: red;
+  --bs-btn-active-bg: transparent !important;
+  --bs-btn-active-border-color: red !important;
 }
 
 .Button-settings-2FA-OFF:hover {
-  background-color: rgba(255, 0, 0, 0.2);
-  border: 2px solid red;
-  color: white;
+  background-color: rgba(255, 0, 0, 0.2) !important;
+  border: 2px solid red !important;
+  color: white !important;
 }
 
 .larger-profile-pic {
