--- a/frontend/src/pages/Settings.css
+++ b/frontend/src/pages/Settings.css
@@ -85,3 +85,23 @@
   box-shadow: 0px 0px 7px #fff inset,
   	      0px 0px 7px #fff;
 }
+
+
+
+
+.default-avatar {
+  background-image: url('../../public/default.jpg');
+  width: 120px;
+  height: 120px;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  object-fit: cover;
+  border-radius: 50%;
+  overflow: hidden;
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
+}
+
