--- a/frontend/src/pages/AI_TicTacToe.css
+++ b/frontend/src/pages/AI_TicTacToe.css
@@ -1,10 +1,8 @@
 .status {
     background-color: #f0f0f0;
-    border: 2px solid #ccc;
     border-radius: 5px;
     padding: 10px;
-    margin-bottom: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-bottom: 10px;
     text-align: center;
     font-weight: bold;
     font-size: 1.2em;
@@ -46,10 +44,31 @@
     margin: 2px; /* Ajoutez une marge pour l'espace entre les carrés */
 }
 
-.reset-button{
-    background-color: rgb(255, 255, 255);
-    color: black;
-    text-align: center;
-    font-size :x-large;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+.popup-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
 }
+
+.popup {
+    background-color: white;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.linker{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5%;
+    text-decoration: none;
+}
+
+
