--- a/frontend/src/pages/TicTacToe.css
+++ b/frontend/src/pages/TicTacToe.css
@@ -26,6 +26,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position:relative;
 }
 
 .board-row {
@@ -57,4 +58,22 @@
     font-size: 1.2em;
     color: #333;
     transition: background-color 0.3s, color 0.3s;
+}
+
+.pop-up-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Transparence pour assombrir l'arrière-plan */
+    z-index: 999; /* Assure que le pop-up s'affiche au-dessus de tout */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pop-up {
+    max-width: 400px;
+    width: 100%;
 }
