--- a/frontend/src/pages/modeTicTacToe.css
+++ b/frontend/src/pages/modeTicTacToe.css
@@ -79,3 +79,10 @@
     50% { background-position: 400% 0; }
     100% { background-position: 0 0; }
 }
+
+.Dashboard{
+    text-align: center;
+    color:#ffffff;
+    font-size: x-large;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
