ajout du matchmaking en cours

--- a/frontend/src/pages/modeTicTacToe.css
+++ b/frontend/src/pages/modeTicTacToe.css
@@ -80,7 +80,7 @@
     100% { background-position: 0 0; }
 }
 
-.Dashboard{
+.History{
     text-align: center;
     color:#ffffff;
     font-size: x-large;
