--- a/frontend/src/pages/tournament.css
+++ b/frontend/src/pages/tournament.css
@@ -7,10 +7,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 100vh;
-    position: relative;
-    bottom: 200px;
+    /*justify-content: center;*/
+    /*height: 100vh;*/
+    /*position: relative;*/
+    /*bottom: 200px;*/
+    margin-top: 10%
 }
 
 .header {
