--- a/frontend/src/pages/matchmakingTicTacToe.css
+++ b/frontend/src/pages/matchmakingTicTacToe.css
@@ -1,15 +1,36 @@
 .container-board {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 20px;
-    background-color: blanchedalmond;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+  max-width:30vw;
+  max-height:30vw;
+  background-color: blanchedalmond;
+}
+
+.pop-up-overlay{
+  display :flex;
+}
+
+.pop-up{
+  display:center;
+  background-color: white;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.toconnect{
+  margin-top: 10px;
+  display: flex;
+  max-width:30vw;
+  max-height:10vw;
+  border-radius: 5px;
+}
+
 .p{
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 20px;
-    }
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
