ajout profileAmis + parse input (attention tictactoe+matchmaking ne prend plus les stats sur cet version a fix)

--- a/frontend/src/pages/Login42.css
+++ b/frontend/src/pages/Login42.css
@@ -86,7 +86,10 @@ font-family: "Roboto", sans-serif;
   font-style: italic;
   font-family: "Dela", sans-serif;
   font-size: 100px;
-  color: #f088a0;
+  /*color: #f088a0;*/
+  /*color: #feb86d;*/
+  /*color: #ca67d3;*/
+  color: #e6529e
 }
 /*TEXT INTRO*/
 
