--- a/frontend/src/pages/Settings.css
+++ b/frontend/src/pages/Settings.css
@@ -76,15 +76,19 @@
   left: 58%;
   transform: translate(-50%, -50%);
   bottom: 1px;
-  /*right: 50%;*/
   width: 28px;
   height: 28px;
-  background-color: #28a745;
   border-radius: 50%;
   border: 1px solid #fff;
   box-shadow: 0px 0px 7px #fff inset,
   	      0px 0px 7px #fff;
+  background-color: #28a745; /* Défaut: couleur verte */
 }
+
+.active-indicator.offline {
+  background-color: grey; /* Couleur grise pour l'état hors ligne */
+}
+
 
 
 
