--- a/frontend/src/pages/tournament.css
+++ b/frontend/src/pages/tournament.css
@@ -11,7 +11,7 @@
     /*height: 100vh;*/
     /*position: relative;*/
     /*bottom: 200px;*/
-    margin-top: 10%
+    /*margin-top: 10%*/
 }
 
 .header {
