--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -24,7 +24,7 @@
 
 .container-home {
   display: grid;
-  /*grid-template-columns: 300px 300px 300px;*/
+  grid-template-columns: 300px 300px 300px;
   /*grid-template-rows:300px 200px;*/
   gap: 50px;
   margin-top: 3%;
@@ -136,7 +136,36 @@
   grid-row: 2;
 }
 
+.warning-container{
+  display:flex;
+  align-items:left;
+  background-color: white;
+  background-position: center;
+  border-radius: 2.5%;
+  height: 5vw;
+  width:20vw;
+  justify-self: center;
+  margin:5%;
+  grid-row: 3;
+  grid-column: 2;
+  font-family: Arial, Helvetica, sans-serif;
+  padding:1%;
+}
 
+.warning-logo{
+  background-image: url('../../public/warning1.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: left;
+  background-color: rgba(255, 255, 255, 0);
+  height:4vw;
+  width:10vw;
+}
+
+.warning-container p {
+  margin: 3px;
+  margin-top: 2%;
+}
 
 
 .centered-container {
